--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Banner</string>
+    <string name="start_flip">开始滑动</string>
+    <string name="stop_flip">停止滑动</string>
 </resources>
